Added nested code.

--- a/jupyternotebooks/OSI_new.ipynb
+++ b/jupyternotebooks/OSI_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7fb2a956",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2a7a9c61",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "12a94644",
    "metadata": {},
    "outputs": [
@@ -103,17 +103,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ProbeA pynwb.device.Device at 0x1752337925456\n",
+      "ProbeA pynwb.device.Device at 0x3171809868288\n",
       "Fields:\n",
       "  description: Model:  - Serial number: 20097906352\n",
       "  manufacturer: IMEC\n",
-      "\n"
+      "\n",
+      "electrodes hdmf.common.table.DynamicTable at 0x3171809011616\n",
+      "Fields:\n",
+      "  colnames: ['location' 'group' 'group_name' 'channel_name' 'physical_unit'\n",
+      " 'offset_to_physical_unit' 'rel_x' 'rel_y' 'gain_to_physical_unit'\n",
+      " 'inter_sample_shift']\n",
+      "  columns: (\n",
+      "    location <class 'hdmf.common.table.VectorData'>,\n",
+      "    group <class 'hdmf.common.table.VectorData'>,\n",
+      "    group_name <class 'hdmf.common.table.VectorData'>,\n",
+      "    channel_name <class 'hdmf.common.table.VectorData'>,\n",
+      "    physical_unit <class 'hdmf.common.table.VectorData'>,\n",
+      "    offset_to_physical_unit <class 'hdmf.common.table.VectorData'>,\n",
+      "    rel_x <class 'hdmf.common.table.VectorData'>,\n",
+      "    rel_y <class 'hdmf.common.table.VectorData'>,\n",
+      "    gain_to_physical_unit <class 'hdmf.common.table.VectorData'>,\n",
+      "    inter_sample_shift <class 'hdmf.common.table.VectorData'>\n",
+      "  )\n",
+      "  description: metadata about extracellular electrodes\n",
+      "  id: id <class 'hdmf.common.table.ElementIdentifiers'>\n",
+      "\n",
+      "<hdmf.common.table.VectorData object at 0x000002E27E99A050>\n"
      ]
     }
    ],
    "source": [
     "probeA = nwb.devices['ProbeA']\n",
-    "print(probeA)"
+    "print(probeA)\n",
+    "\n",
+    "print(nwb.electrodes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "439f8ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hdmf.common.table.VectorData object at 0x000002E27E99A050>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nwb.electrodes['location'])"
    ]
   },
   {
