Saving intermediate as backup.

--- a/jupyternotebooks/OSI_new.ipynb
+++ b/jupyternotebooks/OSI_new.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "12a94644",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,25 @@
       "Fields:\n",
       "  description: Model:  - Serial number: 20097906352\n",
       "  manufacturer: IMEC\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "probeA = nwb.devices['ProbeA']\n",
+    "print(probeA)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fcbf9937",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "electrodes hdmf.common.table.DynamicTable at 0x3171809011616\n",
       "Fields:\n",
       "  colnames: ['location' 'group' 'group_name' 'channel_name' 'physical_unit'\n",
@@ -127,21 +145,17 @@
       "  )\n",
       "  description: metadata about extracellular electrodes\n",
       "  id: id <class 'hdmf.common.table.ElementIdentifiers'>\n",
-      "\n",
-      "<hdmf.common.table.VectorData object at 0x000002E27E99A050>\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "probeA = nwb.devices['ProbeA']\n",
-    "print(probeA)\n",
-    "\n",
-    "print(nwb.electrodes)\n"
+    "print(nwb.electrodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "439f8ad8",
    "metadata": {},
    "outputs": [
@@ -149,12 +163,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hdmf.common.table.VectorData object at 0x000002E27E99A050>\n"
+      "[16. 48.  0. 32. 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.\n",
+      "  0. 32. 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.  0. 32.\n",
+      " 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.  0. 32. 16. 48.]\n",
+      "1920\n"
      ]
     }
    ],
    "source": [
-    "print(nwb.electrodes['location'])"
+    "print(nwb.electrodes['rel_x'].data[:50])\n",
+    "\n",
+    "print(len(nwb.electrodes['rel_x'].data[:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6e469e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['unknown' 'unknown' 'unknown' 'unknown' 'unknown' 'unknown' 'unknown'\n",
+      " 'unknown' 'unknown' 'unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nwb.electrodes['location'].data[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6b23db50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('spike_times', 'electrodes', 'waveform_mean', 'waveform_sd', 'unit_name', 'nn_hit_rate', 'presence_ratio', 'spread', 'sync_spike_2', 'sliding_rp_violation', 'estimated_z', 'num_negative_peaks', 'num_spikes', 'ks_unit_id', 'firing_range', 'l_ratio', 'drift_ptp', 'exp_decay', 'peak_trough_ratio', 'amplitude_cv_range', 'default_qc', 'num_positive_peaks', 'estimated_x', 'peak_to_valley', 'amplitude_cv_median', 'amplitude_median', 'original_cluster_id', 'recovery_slope', 'extremum_channel_index', 'firing_rate', 'amplitude', 'isi_violations_ratio', 'rp_violations', 'drift_mad', 'device_name', 'sync_spike_8', 'decoder_probability', 'd_prime', 'repolarization_slope', 'velocity_above', 'velocity_below', 'shank', 'amplitude_cutoff', 'rp_contamination', 'sync_spike_4', 'half_width', 'isi_violations_count', 'estimated_y', 'isolation_distance', 'nn_miss_rate', 'drift_std', 'silhouette', 'decoder_label', 'depth', 'snr')\n",
+      "[ 480  960 1440 1920 2400 2880 3360 3840 4320 4800]\n",
+      "[10.08 11.05 11.53 16.64 19.94 25.02 12.35 27.71 19.22  9.69]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nwb.units.colnames)\n",
+    "print(nwb.units['electrodes'].data[:10])\n",
+    "print(nwb.units['estimated_x'].data[:10])"
    ]
   },
   {
